--- a/templates/signin.gohtml
+++ b/templates/signin.gohtml
@@ -5,6 +5,9 @@
             Welcome back
         </h1>
         <form action="/signin" method="post">
+
+            <input type="hidden" name="csrf" value="">
+
             <div class="py-2">
                 <label for="email" class="text-sm font-semibold text-gray-800">
                     Email Address
