--- a/templates/signin.gohtml
+++ b/templates/signin.gohtml
@@ -6,7 +6,9 @@
         </h1>
         <form action="/signin" method="post">
 
-            <input type="hidden" name="csrf" value="">
+            <div class="hidden">
+                {{csrfField}}
+            </div>
 
             <div class="py-2">
                 <label for="email" class="text-sm font-semibold text-gray-800">
